--- a/index.html
+++ b/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta charset="utf-8">
 		<title>Amelie Boulangerie</title>
+		<meta charset="utf-8">
+		<meta name="author" content="Michael Smith">
+		<meta name="description"content="Amelie Boulangerie has many bakery items, including macaroons that taste like they came from Paris. Located in Tempe, AZ. Come  visit  us today!">
 		<link href="styles.css" rel="stylesheet">
+		<link rel="icon" href="favicon.ico" type="image/x-icon">
 	</head>
 	<body>
-		<header>
-			<h1>Amelie Boulangerie</h1>
-		</header>
-		<div id="grid-container">
+		<div id="wrapper">
+			<header>
+				<h1>Amelie Boulangerie</h1>
+			</header>
 			<nav>
 				<ul>
-					<li><a href="index.html">Home</a></li>
+					<li><a href="index.html" class="active-page">Home</a></li>
 					<li><a href="#">Pastries</a></li>
 					<li><a href="#">Events</a></li>
 					<li><a href="#">Contact</a></li>
@@ -20,7 +23,8 @@
 			</nav>
 			<main>
 				<h2>Experience the Difference</h2>
-				<p>Amelie Boulangerie is the master of flavor combinations. The jewel-colored macarons come in the most tempting of flavors. Experience the difference at Amelie Boulangerie.</p>
+				<img src="cafe-counter.jpg" alt="Image of woman working behind a bakery counter" id="floatleft">
+				<p><span class="bakery">Amelie Boulangerie</span> is the master of flavor combinations. The jewel-colored macarons come in the most tempting of flavors. Experience the difference at <span class="bakery"> Boulangerie</span>.</p>
 			
 				<ul>
 					<li>Small batch baking to ensure quality and freshness</li>
@@ -29,18 +33,19 @@
 					<li>Live acoustic music on Thursdays and Saturday nights</li>
 				</ul>
 			
-				<address>
+				<address class="clear">
 					Amelie Boulangerie<br>
 					231 University Drive<br>
 					Tempe, AZ 85281<br>
 					480-555-5555<br>
-					Hours: Mon-Sun, 6am-9pm
+					Hours: Mon-Sun, 6am-9pm<br>
 				</address>
 			</main>	
-		</div>
-		<footer>
-			<p>Copyright &copy;2020 Amelie Boulangerie</p>
-		</footer>	
+			
+			<footer>
+				Copyright &copy;2020 Amelie Boulangerie<br>
+			</footer>
+		</div><!--closes wrapper-->		
 	</body>
 </html>
 
